; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_unicode-utils.c_unicode_totitle.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_unicode-utils.c_unicode_totitle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unicode_totitle(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = sub nsw i32 %4, 452
  %6 = icmp ult i32 %5, 9
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = sub nsw i32 %8, 497
  %10 = icmp ult i32 %9, 3
  br i1 %10, label %11, label %16

11:                                               ; preds = %7, %1
  %12 = load i32, i32* %3, align 4
  %13 = mul nsw i32 %12, 685
  %14 = ashr i32 %13, 11
  %15 = mul nsw i32 %14, 3
  store i32 %15, i32* %2, align 4
  br label %19

16:                                               ; preds = %7
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @unicode_toupper(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %16, %11
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @unicode_toupper(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
